--- a/requirements.txt
+++ b/requirements.txt
@@ -26,5 +26,7 @@ YouTubeMusicAPI == 2.0
 pydoodle >= 1.1.3
 webdriver-manager == 3.5.2
 selenium >= 4.1.0
-
-
+jishaku >= 2.5.1
+aiohttp~=3.8.4
+requests~=2.25.1
+beautifulsoup4~=4.12.2
