--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,10 @@ py-cord >= 2.4.1
 langdetect >= 1.0.9
 python-dotenv >= 1.0.1
 mystbin.py >= 6.1.0
-spotipy >= 2.19.0
 google-api-python-client == 1.12.8
 google >= 3.0.0
 PyNaCl >= 1.4.0
 youtube-search-python >= 1.4.2
-youtube-dl >= 2021.3.3
 mcstatus >= 9.4.0
 translate >= 3.6.1
 youtube-transcript-api >= 0.4.1
@@ -26,3 +24,4 @@ aiohttp~=3.8.4
 requests~=2.25.1
 beautifulsoup4~=4.12.2
 discord-together >= 1.2.6
+wavelink >= 3.2.0
